@@ -16,10 +16,6 @@ import (
 	"time"
 )
 
-const (
-	UTXO_RECORDS_PREALLOC = 40e6
-)
-
 var (
 	UTXO_WRITING_TIME_TARGET        = 5 * time.Minute // Take it easy with flushing UTXO.db onto disk
 	UTXO_SKIP_SAVE_BLOCKS    uint32 = 0
@@ -353,7 +349,7 @@ func (db *UnspentDB) CommitBlockTxs(changes *BlockChanges, blhash []byte) (e err
 			bu.Write(blhash)
 			if changes.UndoData != nil {
 				for _, xx := range changes.UndoData {
-					bin := xx.Serialize(SERIALIZE_FULL, tmp[:])
+					bin := xx.Serialize(true, tmp[:])
 					btc.WriteVlen(bu, uint64(len(bin)))
 					bu.Write(bin)
 				}
@@ -434,7 +430,7 @@ func (db *UnspentDB) UndoBlockTxs(bl *btc.Block, newhash []byte) {
 			}
 		}
 		db.RWMutex.Lock()
-		db.HashMap[ind] = rec.Serialize(0, nil)
+		db.HashMap[ind] = rec.Serialize(false, nil)
 		db.RWMutex.Unlock()
 	}
 
@@ -537,7 +533,7 @@ func (db *UnspentDB) del(hash []byte, outs []bool) {
 	}
 	db.RWMutex.Lock()
 	if anyout {
-		db.HashMap[ind] = rec.Serialize(0, nil)
+		db.HashMap[ind] = rec.Serialize(false, nil)
 	} else {
 		delete(db.HashMap, ind)
 	}
@@ -569,7 +565,7 @@ func (db *UnspentDB) commit(changes *BlockChanges) {
 		}
 		if add_this_tx {
 			db.RWMutex.Lock()
-			db.HashMap[ind] = rec.Serialize(0, nil)
+			db.HashMap[ind] = rec.Serialize(false, nil)
 			db.RWMutex.Unlock()
 		}
 	}
@@ -633,7 +629,7 @@ func (db *UnspentDB) UTXOStats() (s string) {
 			unspendable_recs++
 		}
 
-		compr := rec.Serialize(SERIALIZE_COMPRESS, buf[:])
+		compr := rec.SerializeC(false, buf[:])
 		reclen = uint64(len(compr) + UtxoIdxLen)
 		compressedsize += uint64(btc.VLenSize(reclen))
 		compressedsize += reclen
@@ -694,7 +690,7 @@ func (db *UnspentDB) PurgeUnspendable(all bool) {
 			delete(db.HashMap, k)
 			unspendable_txs++
 		} else if record_removed > 0 {
-			db.HashMap[k] = rec.Serialize(0, nil)
+			db.HashMap[k] = rec.Serialize(false, nil)
 			Memory_Free(v)
 			unspendable_recs += record_removed
 		}
